Revert "Prevent layout shift when using swiper"
This reverts commit 50793e261167585b5dae3151c03fb28acdb02994.

--- a/view/frontend/web/css/testimonials.less
+++ b/view/frontend/web/css/testimonials.less
@@ -312,7 +312,7 @@
 
     figure.testimonial {
         box-sizing: border-box;
-        margin: 0 10px 0 0;
+        margin: 0;
         padding: 40px 20px 0;
         height: 100%;
 
